--- a/andriodApp/app/src/main/res/layout/container_home_page_attendees.xml
+++ b/andriodApp/app/src/main/res/layout/container_home_page_attendees.xml
@@ -2,13 +2,11 @@
 
 <FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/container_home_page_attendees"
   android:layout_width="match_parent"
   android:layout_height="807dp"
   android:background="@drawable/container_home_page_attendees">
-  
+
   <ImageView
     android:id="@+id/img_rectangle"
     android:layout_width="395dp"
@@ -18,7 +16,7 @@
     android:layout_gravity="top|left"
     android:background="@drawable/img_rectangle"
     android:scaleType="centerInside" />
-  
+
   <ImageView
     android:id="@+id/image_group"
     android:layout_width="26.19dp"
@@ -29,7 +27,7 @@
     android:layout_marginBottom="30.81dp"
     android:scaleType="centerInside"
     android:src="@drawable/image_group" />
-  
+
   <ImageView
     android:id="@+id/container_document"
     android:layout_width="25dp"
@@ -38,7 +36,7 @@
     android:layout_marginTop="755.95dp"
     android:scaleType="centerInside"
     android:src="@drawable/container_document" />
-  
+
   <ImageView
     android:id="@+id/img_vector"
     android:layout_width="26.19dp"
@@ -49,7 +47,7 @@
     android:layout_marginBottom="30.81dp"
     android:scaleType="centerInside"
     android:src="@drawable/img_vector" />
-  
+
   <LinearLayout
     android:id="@+id/container_cards"
     android:layout_width="363dp"
@@ -64,22 +62,15 @@
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
     android:paddingTop="8dp">
-    
-    <ImageView
-      android:id="@+id/container_news_images"
-      android:layout_width="96dp"
-      android:layout_height="96dp"
-      android:background="@drawable/container_news_images"
-      android:scaleType="centerInside" />
-    
+
     <LinearLayout
       android:id="@+id/container_frame"
       android:layout_width="264dp"
       android:layout_height="wrap_content"
-      android:layout_marginLeft="4dp"
+      android:layout_marginLeft="100dp"
       android:gravity="left|top"
       android:orientation="vertical">
-      
+
       <TextView
         android:id="@+id/txt_categories"
         android:layout_width="wrap_content"
@@ -90,8 +81,8 @@
         android:singleLine="true"
         android:text="Keynote"
         android:textColor="#FF4E4B66"
-        android:textSize="13dp" />
-      
+        android:textSize="18sp" />
+
       <TextView
         android:id="@+id/txt_insights"
         android:layout_width="264dp"
@@ -103,7 +94,7 @@
         android:text="Join us at 11 AM in Hall B for insights from industry leaders!"
         android:textColor="#FF000000"
         android:textSize="16dp" />
-      
+
       <LinearLayout
         android:id="@+id/container_frame2"
         android:layout_width="match_parent"
@@ -111,7 +102,7 @@
         android:layout_marginTop="4dp"
         android:gravity="left|center_vertical"
         android:orientation="horizontal">
-        
+
         <LinearLayout
           android:id="@+id/container_frame4"
           android:layout_width="wrap_content"
@@ -119,14 +110,14 @@
           android:clipToPadding="false"
           android:gravity="center"
           android:orientation="horizontal">
-          
+
           <ImageView
             android:id="@+id/img_icon"
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:scaleType="centerInside"
             android:src="@drawable/img_icon" />
-          
+
           <TextView
             android:id="@+id/txt_time_ago"
             android:layout_width="wrap_content"
@@ -138,12 +129,12 @@
             android:singleLine="true"
             android:text="14m ago"
             android:textColor="#FF4E4B66"
-            android:textSize="13dp" />
+            android:textSize="18sp" />
         </LinearLayout>
       </LinearLayout>
     </LinearLayout>
   </LinearLayout>
-  
+
   <ImageView
     android:id="@+id/img_img"
     android:layout_width="96dp"
@@ -153,7 +144,7 @@
     android:layout_gravity="top|left"
     android:scaleType="centerInside"
     android:src="@drawable/img_img" />
-  
+
   <LinearLayout
     android:id="@+id/container_cards1"
     android:layout_width="363dp"
@@ -168,22 +159,15 @@
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
     android:paddingTop="8dp">
-    
-    <ImageView
-      android:id="@+id/container_news_images1"
-      android:layout_width="96dp"
-      android:layout_height="96dp"
-      android:background="@drawable/container_news_images1"
-      android:scaleType="centerInside" />
-    
+
     <LinearLayout
       android:id="@+id/container_frame1"
       android:layout_width="264dp"
       android:layout_height="wrap_content"
-      android:layout_marginLeft="4dp"
+      android:layout_marginLeft="100dp"
       android:gravity="left|top"
       android:orientation="vertical">
-      
+
       <TextView
         android:id="@+id/text_categories"
         android:layout_width="wrap_content"
@@ -194,8 +178,8 @@
         android:singleLine="true"
         android:text="Exclusive"
         android:textColor="#FF4E4B66"
-        android:textSize="13dp" />
-      
+        android:textSize="18sp" />
+
       <TextView
         android:id="@+id/text_tech_innovations_talk"
         android:layout_width="264dp"
@@ -207,7 +191,7 @@
         android:text="&#39;Tech Innovations Talk&#39;, 3 PM in the Auditorium!&quot;"
         android:textColor="#FF000000"
         android:textSize="16dp" />
-      
+
       <LinearLayout
         android:id="@+id/container_frame11"
         android:layout_width="match_parent"
@@ -215,7 +199,7 @@
         android:layout_marginTop="4dp"
         android:gravity="left|center_vertical"
         android:orientation="horizontal">
-        
+
         <LinearLayout
           android:id="@+id/container_frame31"
           android:layout_width="wrap_content"
@@ -223,14 +207,14 @@
           android:clipToPadding="false"
           android:gravity="center"
           android:orientation="horizontal">
-          
+
           <ImageView
             android:id="@+id/image_icon"
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:scaleType="centerInside"
             android:src="@drawable/image_icon" />
-          
+
           <TextView
             android:id="@+id/text_time_ago"
             android:layout_width="wrap_content"
@@ -242,12 +226,12 @@
             android:singleLine="true"
             android:text="56m ago"
             android:textColor="#FF4E4B66"
-            android:textSize="13dp" />
+            android:textSize="18sp" />
         </LinearLayout>
       </LinearLayout>
     </LinearLayout>
   </LinearLayout>
-  
+
   <ImageView
     android:id="@+id/iv_map"
     android:layout_width="17.5dp"
@@ -257,7 +241,7 @@
     android:layout_gravity="top|left"
     android:scaleType="centerInside"
     android:src="@drawable/iv_map" />
-  
+
   <TextView
     android:id="@+id/text_notifications"
     android:layout_width="wrap_content"
@@ -271,8 +255,8 @@
     android:singleLine="true"
     android:text="Notifications:"
     android:textColor="#FF000000"
-    android:textSize="13dp" />
-  
+    android:textSize="18sp" />
+
   <TextView
     android:id="@+id/text_ccis_uofa"
     android:layout_width="wrap_content"
@@ -286,8 +270,8 @@
     android:singleLine="true"
     android:text="CCIS, UofA"
     android:textColor="#FF000000"
-    android:textSize="13dp" />
-  
+    android:textSize="18sp" />
+
   <ImageView
     android:id="@+id/img_img1"
     android:layout_width="96dp"
@@ -297,28 +281,28 @@
     android:layout_gravity="top|left"
     android:scaleType="centerInside"
     android:src="@drawable/img_img1" />
-  
+
   <ImageView
-    android:id="@+id/img_career_fairs_web_banner"
-    android:layout_width="330dp"
-    android:layout_height="204dp"
-    android:layout_marginLeft="25dp"
-    android:layout_marginTop="17dp"
-    android:layout_gravity="top|left"
-    android:scaleType="centerInside"
-    android:src="@drawable/img_career_fairs_web_banner" />
-  
+      android:id="@+id/img_career_fairs_web_banner"
+      android:layout_width="330dp"
+      android:layout_height="204dp"
+      android:layout_gravity="top|left"
+      android:layout_marginLeft="25dp"
+      android:layout_marginTop="17dp"
+      android:scaleType="centerInside"
+      android:src="@drawable/img_career_fairs_web_banner" />
+
   <LinearLayout
     android:layout_width="343dp"
     android:layout_height="72dp"
-    android:layout_marginLeft="18dp"
+    android:layout_marginLeft="40dp"
     android:layout_marginTop="248dp"
     android:layout_marginBottom="-15dp"
     android:layout_gravity="top|left"
     android:gravity="left|top"
     android:orientation="vertical"
     android:paddingBottom="15dp">
-    
+
     <TextView
       android:layout_width="wrap_content"
       android:layout_height="20dp"
@@ -329,16 +313,16 @@
       android:text=""
       android:textColor="#FF4E4B66"
       android:textSize="13dp" />
-    
+
     <TextView
-      android:layout_width="364dp"
-      android:layout_height="48dp"
-      android:layout_marginTop="4dp"
-      android:gravity="left|top"
-      android:includeFontPadding="false"
-      android:lineHeight="24dp"
-      android:text="👋 Welcome to Career Launchpad 2024! 🚀\n"
-      android:textColor="#FF000000"
-      android:textSize="16dp" />
+        android:layout_width="364dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:gravity="left|top"
+        android:includeFontPadding="false"
+        android:lineHeight="24dp"
+        android:text="👋 Welcome to Career Launchpad 2024! 🚀\n"
+        android:textColor="#FF000000"
+        android:textSize="16dp" />
   </LinearLayout>
 </FrameLayout>
