--- a/andriodApp/app/src/main/res/layout/attendees_browse_events.xml
+++ b/andriodApp/app/src/main/res/layout/attendees_browse_events.xml
@@ -26,7 +26,8 @@
       android:id="@+id/eventsRecyclerView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_marginTop="60dp"/>
+      android:layout_marginTop="60dp"
+      android:layout_marginBottom="128dp"/>
 
   <ImageView
       android:id="@+id/back_attendee_browse_events"
