--- a/andriodApp/app/src/main/res/layout/attendees_home_page.xml
+++ b/andriodApp/app/src/main/res/layout/attendees_home_page.xml
@@ -6,6 +6,41 @@
   android:layout_width="match_parent"
   android:layout_height="807dp"
   android:background="@drawable/container_home_page_attendees">
+
+  <TextView
+        android:id="@+id/text_notifications"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="312dp"
+        android:layout_gravity="top|left"
+        android:gravity="left|center_vertical"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="Notifications:"
+        android:textColor="#FF000000"
+        android:textSize="18sp" />
+
+  <!-- RecyclerView for notifications -->
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/eventRecyclerView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="340dp"
+      android:clipToPadding="false"
+      android:paddingBottom="110dp" />
+
+    <!-- RecyclerView for notifications -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/notificationsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="340dp"
+        android:clipToPadding="false"
+        android:paddingBottom="110dp" />
+
+
   <ImageView
       android:id="@+id/bottom_actionbar"
       android:layout_width="395dp"
@@ -50,262 +85,7 @@
       android:src="@drawable/event_list"
       android:contentDescription="Button to show a list " />
 
-  <LinearLayout
-    android:id="@+id/container_cards"
-    android:layout_width="363dp"
-    android:layout_height="109dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="336dp"
-    android:layout_gravity="top|left"
-    android:background="@drawable/container_cards"
-    android:gravity="left|top"
-    android:orientation="horizontal"
-    android:paddingBottom="8dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:paddingTop="8dp">
-
-    <LinearLayout
-      android:id="@+id/container_frame"
-      android:layout_width="264dp"
-      android:layout_height="wrap_content"
-      android:layout_marginLeft="100dp"
-      android:gravity="left|top"
-      android:orientation="vertical">
-
-      <TextView
-        android:id="@+id/txt_categories"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:gravity="left|center_vertical"
-        android:includeFontPadding="false"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:text="Keynote"
-        android:textColor="#FF4E4B66"
-        android:textSize="18sp" />
-
-      <TextView
-        android:id="@+id/txt_insights"
-        android:layout_width="264dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="4dp"
-        android:gravity="left|top"
-        android:includeFontPadding="false"
-        android:lineHeight="24dp"
-        android:text="Join us at 11 AM in Hall B for insights from industry leaders!"
-        android:textColor="#FF000000"
-        android:textSize="16dp" />
-
-      <LinearLayout
-        android:id="@+id/container_frame2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:gravity="left|center_vertical"
-        android:orientation="horizontal">
-
-        <LinearLayout
-          android:id="@+id/container_frame4"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:clipToPadding="false"
-          android:gravity="center"
-          android:orientation="horizontal">
-
-          <ImageView
-            android:id="@+id/img_icon"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/clock_image" />
-
-          <TextView
-            android:id="@+id/txt_time_ago"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginLeft="4dp"
-            android:gravity="left|center_vertical"
-            android:includeFontPadding="false"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:text="14m ago"
-            android:textColor="#FF4E4B66"
-            android:textSize="18sp" />
-        </LinearLayout>
-      </LinearLayout>
-    </LinearLayout>
-  </LinearLayout>
-
-  <ImageView
-    android:id="@+id/img_img"
-    android:layout_width="96dp"
-    android:layout_height="98dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="340dp"
-    android:layout_gravity="top|left"
-    android:scaleType="centerInside"
-    android:src="@drawable/img_img" />
-
-  <LinearLayout
-    android:id="@+id/container_cards1"
-    android:layout_width="363dp"
-    android:layout_height="109dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="447dp"
-    android:layout_gravity="top|left"
-    android:background="@drawable/container_cards1"
-    android:gravity="left|top"
-    android:orientation="horizontal"
-    android:paddingBottom="8dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:paddingTop="8dp">
-
-    <LinearLayout
-      android:id="@+id/container_frame1"
-      android:layout_width="264dp"
-      android:layout_height="wrap_content"
-      android:layout_marginLeft="100dp"
-      android:gravity="left|top"
-      android:orientation="vertical">
-
-      <TextView
-        android:id="@+id/text_categories"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:gravity="left|center_vertical"
-        android:includeFontPadding="false"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:text="Exclusive"
-        android:textColor="#FF4E4B66"
-        android:textSize="18sp" />
-
-      <TextView
-        android:id="@+id/text_tech_innovations_talk"
-        android:layout_width="264dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="4dp"
-        android:gravity="left|top"
-        android:includeFontPadding="false"
-        android:lineHeight="24dp"
-        android:text="&#39;Tech Innovations Talk&#39;, 3 PM in the Auditorium!&quot;"
-        android:textColor="#FF000000"
-        android:textSize="16dp" />
-
-      <LinearLayout
-        android:id="@+id/container_frame11"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:gravity="left|center_vertical"
-        android:orientation="horizontal">
-
-        <LinearLayout
-          android:id="@+id/container_frame31"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:clipToPadding="false"
-          android:gravity="center"
-          android:orientation="horizontal">
-
-          <ImageView
-            android:id="@+id/image_icon"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/clock_image" />
-
-          <TextView
-            android:id="@+id/text_time_ago"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginLeft="4dp"
-            android:gravity="left|center_vertical"
-            android:includeFontPadding="false"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:text="56m ago"
-            android:textColor="#FF4E4B66"
-            android:textSize="18sp" />
-        </LinearLayout>
-      </LinearLayout>
-    </LinearLayout>
-  </LinearLayout>
-
-  <ImageView
-    android:id="@+id/location_pin_attendee_home"
-    android:layout_width="17.5dp"
-    android:layout_height="25dp"
-    android:layout_marginLeft="15dp"
-    android:layout_marginTop="235dp"
-    android:layout_gravity="top|left"
-    android:scaleType="centerInside"
-    android:src="@drawable/location_pin" />
-
   <TextView
-    android:id="@+id/text_notifications"
-    android:layout_width="wrap_content"
-    android:layout_height="20dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginTop="312dp"
-    android:layout_gravity="top|left"
-    android:gravity="left|center_vertical"
-    android:includeFontPadding="false"
-    android:maxLines="1"
-    android:singleLine="true"
-    android:text="Notifications:"
-    android:textColor="#FF000000"
-    android:textSize="18sp" />
-
-  <TextView
-    android:id="@+id/text_ccis_uofa"
-    android:layout_width="wrap_content"
-    android:layout_height="17dp"
-    android:layout_marginLeft="41dp"
-    android:layout_marginTop="240dp"
-    android:layout_gravity="top|left"
-    android:gravity="left|center_vertical"
-    android:includeFontPadding="false"
-    android:maxLines="1"
-    android:singleLine="true"
-    android:text="CCIS, UofA"
-    android:textColor="#FF000000"
-    android:textSize="18sp" />
-
-  <ImageView
-    android:id="@+id/img_img1"
-    android:layout_width="96dp"
-    android:layout_height="98dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginTop="458dp"
-    android:layout_gravity="top|left"
-    android:scaleType="centerInside"
-    android:src="@drawable/img_img1" />
-
-  <ImageView
-      android:id="@+id/img_career_fairs_web_banner"
-      android:layout_width="330dp"
-      android:layout_height="204dp"
-      android:layout_gravity="top|left"
-      android:layout_marginLeft="25dp"
-      android:layout_marginTop="17dp"
-      android:scaleType="centerInside"
-      android:src="@drawable/img_career_fairs_web_banner" />
-
-  <LinearLayout
-    android:layout_width="343dp"
-    android:layout_height="72dp"
-    android:layout_marginLeft="40dp"
-    android:layout_marginTop="248dp"
-    android:layout_marginBottom="-15dp"
-    android:layout_gravity="top|left"
-    android:gravity="left|top"
-    android:orientation="vertical"
-    android:paddingBottom="15dp">
-
-    <TextView
       android:layout_width="wrap_content"
       android:layout_height="20dp"
       android:gravity="left|center_vertical"
@@ -316,15 +96,4 @@
       android:textColor="#FF4E4B66"
       android:textSize="13dp" />
 
-    <TextView
-        android:layout_width="364dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="4dp"
-        android:gravity="left|top"
-        android:includeFontPadding="false"
-        android:lineHeight="24dp"
-        android:text="👋 Welcome to Career Launchpad 2024! 🚀\n"
-        android:textColor="#FF000000"
-        android:textSize="16dp" />
-  </LinearLayout>
 </FrameLayout>
