--- a/andriodApp/app/src/main/res/layout/activity_main.xml
+++ b/andriodApp/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
             android:id="@+id/attendee_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Send Notification"
+            android:text="Attendee Home"
             tools:ignore="MissingConstraints"
             />
     </LinearLayout>
