--- a/andriodApp/app/src/main/res/layout/qr_code_scan.xml
+++ b/andriodApp/app/src/main/res/layout/qr_code_scan.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/container_attendy_login"
-  android:layout_width="match_parent"
-  android:layout_height="807dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container_attendy_login"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+  <androidx.camera.view.PreviewView
+      android:id="@+id/viewFinder"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
   
   <FrameLayout
     android:id="@+id/container_q_r_code_scanner"
