--- a/andriodApp/app/src/main/res/layout/attendee_event_info_sign_up.xml
+++ b/andriodApp/app/src/main/res/layout/attendee_event_info_sign_up.xml
@@ -105,7 +105,7 @@
     <View
         android:id="@+id/light_green_button_rect"
         android:layout_width="205dp"
-        android:layout_height="27dp"
+        android:layout_height="40dp"
         android:layout_marginStart="-1dp"
         android:layout_marginTop="-1dp"
         android:background="@drawable/light_green_button_setup" />
@@ -121,7 +121,8 @@
         android:textAlignment="center"
         android:textColor="@color/create_event_color"
         android:textSize="16.02sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginTop="5dp"/>
   </RelativeLayout>
   <ImageView
       android:id="@+id/bottom_actionbar"
