--- a/andriodApp/app/src/main/res/layout/attendees_browse_signedup_events.xml
+++ b/andriodApp/app/src/main/res/layout/attendees_browse_signedup_events.xml
@@ -11,13 +11,13 @@
       android:layout_width="wrap_content"
       android:layout_height="24dp"
       android:layout_gravity="top|start"
-      android:layout_marginStart="163dp"
+      android:layout_marginStart="147dp"
       android:layout_marginTop="16dp"
       android:gravity="center_horizontal|center_vertical"
       android:includeFontPadding="false"
       android:maxLines="1"
       android:singleLine="true"
-      android:text="Events"
+      android:text="My Events"
       android:textColor="#FF1A1A1A"
       android:textSize="20dp"
       android:textStyle="bold" />
@@ -55,7 +55,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="60dp"
-      android:layout_marginBottom="128dp"/>
+      android:layout_marginBottom="188dp"/>
 
   <ImageView
       android:id="@+id/back_attendee_browse_events"
