--- a/andriodApp/app/src/main/res/layout/attendees_browse_signedup_events.xml
+++ b/andriodApp/app/src/main/res/layout/attendees_browse_signedup_events.xml
@@ -104,11 +104,11 @@
   <ImageView
       android:id="@+id/event_list"
       android:layout_width="38dp"
-      android:layout_height="wrap_content"
+      android:layout_height="38dp"
       android:layout_marginStart="300dp"
       android:layout_marginTop="700dp"
       android:layout_marginBottom="0.05dp"
-      android:contentDescription="Button to show a list "
       android:scaleType="centerInside"
-      android:src="@drawable/event_list" />
+      android:src="@drawable/event_list"
+      android:contentDescription="Button to show a list " />
 </FrameLayout>
